# SlayTheBand

./: .gitignore  Animation.cpp  Animation.h  Buff.cpp  Buff.h  CMakeLists.txt  Card.cpp  Card.h  CardAnimation.h  CardController.cpp  CardController.h  CardPileAnimation.cpp  CardPileAnimation.h  CardView.cpp  CardView.h  Card_Button.cpp  Card_Button.h  Card_Key.cpp  Card_Key.h  Card_Manager.cpp  Card_Manager.h  Card_Meta.h  Character.cpp  Character.h  Defs.h  Enemy.cpp  Enemy.h  Healthbar.cpp  Music_Manager.cpp  Music_Manager.h  Player.cpp  Player.h  README.md  TestMain.cpp  card.cpp  card.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
.github/workflows/: main.yml
App/: MainApp.cpp  MainApp.h
Common/include/: Card_Meta.h  Defs.h  RoomMeta.h
Common/src/: Buff.cpp  Card_Meta.cpp  RoomMeta.cpp
Model/include/buff/: Buff.h
Model/include/card/: CardController.h  CardGenerator.h  Card_Meta.h
Model/include/character/: CharacterMeta.h  EnemyMeta.h  PlayerMeta.h
Model/include/map/: Map.h
Model/include/test/: PlayerMetaTest.h
Model/src/buff/: Buff.cpp
Model/src/card/: CardController.cpp  CardGenerator.cpp  Card_Meta.cpp
Model/src/character/: CharacterMeta.cpp  EnemyMeta.cpp  PlayerMeta.cpp
Model/src/map/: Map.cpp
Model/src/test/: PlayerMetaTest.cpp
View/include/card/: Card.h  CardAnimation.h  CardPile.h  CardPileAnimation.h  CardReward.h  CardView.h  Card_Button.h  HoverButton.h
View/include/character/: Blockbar.h  Character.h  CharacterAnimation.h  Enemy.h  EnemyAnimation.h  Healthbar.h  Manabar.h  Player.h  PlayerAnimation.h
View/include/music/: Music_Manager.h
View/include/page/: BattlePage.h  CardRewardPage.h  HomePage.h  MapPage.h  PageManager.h
View/include/play/: CombatView.h
View/src/: mainwindow.cpp
View/src/card/: Card.cpp  CardAnimation.cpp  CardPile.cpp  CardPileAnimation.cpp  CardReward.cpp  CardView.cpp  Card_Button.cpp  HoverButton.cpp
View/src/character/: Blockbar.cpp  Character.cpp  CharacterAnimation.cpp  Enemy.cpp  EnemyAnimation.cpp  Healthbar.cpp  Manabar.cpp  Player.cpp  PlayerAnimation.cpp
View/src/music/: Music_Manager.cpp
View/src/page/: BattlePage.cpp  CardRewardPage.cpp  HomePage.cpp  MapPage.cpp  PageManager.cpp
View/src/play/: Arrow.cpp  Arrow.h  CombatView.cpp
ViewModel/include/card/: Card_Manager.h
ViewModel/include/character/: Enemy.h  Player.h  RoleManager.h
ViewModel/include/combat/: Combat.h
ViewModel/src/card/: Card_Manager.cpp
ViewModel/src/character/: Enemy.cpp  Player.cpp  RoleManager.cpp
ViewModel/src/combat/: Combat.cpp
